@@ -15,7 +15,6 @@
 
 package software.amazon.smithy.ruby.codegen.integrations;
 
-import java.util.Collections;
 import java.util.List;
 import software.amazon.smithy.model.Model;
 import software.amazon.smithy.model.shapes.ServiceShape;
@@ -27,6 +26,7 @@ import software.amazon.smithy.ruby.codegen.config.ClientConfig;
 import software.amazon.smithy.ruby.codegen.middleware.Middleware;
 import software.amazon.smithy.ruby.codegen.middleware.MiddlewareBuilder;
 import software.amazon.smithy.ruby.codegen.middleware.MiddlewareStackStep;
+import software.amazon.smithy.ruby.codegen.traits.HttpCustomAuthTrait;
 
 public class WhiteLabelTestIntegration implements RubyIntegration {
 
@@ -93,15 +93,14 @@ public class WhiteLabelTestIntegration implements RubyIntegration {
 
     @Override
     public List<AuthScheme> getAdditionalAuthSchemes(GenerationContext context) {
-//        AuthScheme authScheme = AuthScheme.builder()
-//                .shapeId(HttpCustomAuthTrait.ID)
-//                .rubyAuthScheme("test")
-//                .rubyIdentityClass("TestIdentity")
-//                .rubyIdentityResolverConfigDefaultValue(null)
-//                .rubyIdentityResolverConfigName(null)
-//                .build();
-//
-//        return List.of(authScheme);
-        return Collections.emptyList();
+        AuthScheme authScheme = AuthScheme.builder()
+                .shapeId(HttpCustomAuthTrait.ID)
+                .rubyAuthScheme("test")
+                .rubyIdentityClass("TestIdentity")
+                .rubyIdentityResolverConfigDefaultValue(null)
+                .rubyIdentityResolverConfigName(null)
+                .build();
+
+        return List.of(authScheme);
     }
 }
